Updated description day 21, and minor refactoring